2004-11-07  Synge Todo <wistaria@comp-phys.org>

	* Moved all the operator definitions into site basis (for ALPS 1.3).
	
2004-10-08  Synge Todo <wistaria@comp-phys.org>

        * version 3.1.2

	* Rearranged source files to reduce memory size for build.

	* Added master header file 'looper.h'.

	* Removed virtual_graph class template and virtual_graph.h.
	
2004-10-06  Synge Todo <wistaria@comp-phys.org>

        * version 3.1.1

	* Fixed improved estimators for models with negative signs.

	* Fixed (or improved) default labeling probability for models on
	non-bipartite lattices.
	
	* Added diagonal energy measurement.
	
2004-09-23  Synge Todo <wistaria@comp-phys.org>

        * version 3.1

	- prerequisites: boost-1.31, alps-1.2, lapack

        - TODO: optimization, more measurements, bug fix for improved
	estimator with negative sign problem

2004-09-21  Synge Todo <wistaria@comp-phys.org>

        * version 3.1b3

	* Force "ergodic" loop solutions also for non-bipartite lattices.

2004-09-17  Synge Todo <wistaria@comp-phys.org>

	* Removed unused parameter from generate_loops.
	
2004-09-14  Synge Todo <wistaria@comp-phys.org>

        * version 3.1b2

	* Fixed for non-bipartite lattices.

	* Added (hidden) simulation parameters STRICT_MCS and FIXED_SEED
	  for debugging.

	* Fixed sign calculation.

2004-09-13  Synge Todo <wistaria@comp-phys.org>

        * version 3.1b1

	* Fixed energy offset for SSE with "ergodic" loop solutions.

	* Added negative sign support.
	
2004-08-25  Synge Todo <wistaria@comp-phys.org>

	* Fixed xxz.h for systems with different spin sizes.

	* Added support for extenal field in site_parameter.

	* Added an extra parameter to the default weight classes for
	supporting "erdogic" loop solutions.
	
2004-08-20  Synge Todo <wistaria@comp-phys.org>

	* Changed solve_llsp so that the SVD is used instead of QL
	factorization.  Added test programs gesvd and llsp.  Removed
	the test program gels.
	